fix(Operations/List): table content should not jump up when toolbar becomes sticky [YTFRONT-4870]

--- a/packages/ui/src/ui/components/StickyContainer/StickyContainer.scss
+++ b/packages/ui/src/ui/components/StickyContainer/StickyContainer.scss
@@ -10,10 +10,13 @@
 
         background-color: var(--main-background);
 
-        width: calc(100vw - var(--gn-aside-header-size));
-        margin-left: -20px;
-        padding-left: 20px;
-        padding-right: 20px;
+        &_fixed {
+            position: fixed;
+            width: calc(100vw - var(--gn-aside-header-size));
+            margin-left: -20px;
+            padding-left: 20px;
+            padding-right: 20px;
+        }
 
         &_shadow {
             box-shadow: 0 4px 4px -4px var(--opacity-background);
